# fullstack-ai-marketing-platform

asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
nextjs/: package-lock.json  package.json
nextjs/app/: page.tsx
nextjs/app/(dashboard)/project/[projectId]/: loading.tsx  page.tsx
nextjs/app/(dashboard)/projects/: loading.tsx  page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx
nextjs/app/(dashboard)/template/[templateId]/: loading.tsx  page.tsx
nextjs/app/(dashboard)/templates/: loading.tsx  page.tsx
