[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Murty Gudipati <murty.gudipati@saven.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
